回忆录、宠物、视频

--- a/css/module/common/c-footer.less
+++ b/css/module/common/c-footer.less
@@ -4,3 +4,4 @@
 @import url('c-footer/iframe.less');
 @import url('c-footer/ipad.less');
 @import url('c-footer/mobile.less');
+@import url('c-footer/dialog.less');
