--- a/css/pvx/face/list.less
+++ b/css/pvx/face/list.less
@@ -101,4 +101,12 @@
 	}
 }
 
+.ua-responsive .screen-s .m-face-list-item{
+	float:none;
+	.db;
+	.auto(x);
+	border-bottom:1px dashed #ddd;
+	padding-bottom:20px;
+}
+
 .w-listfilter-list .u-sort{.none;}
