--- a/css/pvx/face/sidebar.less
+++ b/css/pvx/face/sidebar.less
@@ -13,7 +13,7 @@
 			.db;.full;transition:0.2s ease-in-out;
 			.fz(13px,32px);
 			.bold;
-			color:@blue-link;
+			color:@bluex;
 		}
 		i{
 			.dbi;.size(30px);.fl;margin-right:10px;
@@ -50,6 +50,9 @@
 		ul{.clearfix;}
 		li{
 			.fl;margin-right:10px;
+		}
+		a{
+			color:#555;
 		}
 		a:hover{
 			color:@blue-link;
