--- a/css/pvx/face/view.less
+++ b/css/pvx/face/view.less
@@ -33,11 +33,9 @@
 		margin-left:322px + 30px;
 	}
 	.m-details,.m-price{
-		line-height:2.2;
-		border-bottom:1px dashed #ddd;
-		padding-bottom:20px;
-		margin-bottom:20px;
+		line-height:2.6;
 		.item{
+			border-bottom:1px dashed #ddd;
 		}
 		.u-author{
 			a{color:@blue-link;}
@@ -133,5 +131,9 @@
 	}
 	.u-wb{
 		.none;
+	}
+	.m-extend .minipic li{
+		.auto(x);
+		float:none;
 	}
 }
