--- a/source/plugin/smart_video/template/p.htm
+++ b/source/plugin/smart_video/template/p.htm
@@ -1,4 +1,5 @@
 {template common/header}
+<link rel="stylesheet" href="http://css.jx3pve.com/css/pvx/pvx-video-old.css" type="text/css" />
 <script type="text/javascript" src="source/plugin/smart_video/static/js/jquery.min.js"></script>
 <script type="text/javascript" charset="gbk" src="source/plugin/smart_video/static/js/p.js?{VERHASH}"></script>
 
