--- a/source/plugin/smart_video/template/s.htm
+++ b/source/plugin/smart_video/template/s.htm
@@ -1,5 +1,5 @@
 {template common/header}
-
+<link rel="stylesheet" href="http://css.jx3pve.com/css/pvx/pvx-video-old.css" type="text/css" />
 <div class="wrap pvx">
     <div class="main video">
         {template common/video_header}
