--- a/template/about/portal/portal_topic_sitemap.htm
+++ b/template/about/portal/portal_topic_sitemap.htm
@@ -18,12 +18,13 @@
 			<ul>
 				<li><a href="./">首页<i class="u-index"></i></a></li>
 				<li><a href="./macro">宏库<i class="u-macro"></i></a></li>
-				<li><a href="./app">应用<i class="u-app"></i></a></li>
 				<li><a href="./tool">工具<i class="u-tool"></i></a></li>
+				<li><a href="./app">应用<i class="u-app"></i></a></li>
+				<li><a href="./skin">皮肤<i class="u-skin"></i></a></li>
 				<li><a href="./role">职业<i class="u-role"></i></a></li>
 				<li><a href="./fam">副本<i class="u-fam"></i></a></li>
 				<li><a href="./face">捏脸<i class="u-face"></i></a></li>
-				<!-- <li><a href="./wall">壁纸</a></li> -->
+				<li><a href="./wall">壁纸<i class="u-wall"></i></a></li>
 				<li><a href="./raid">团队<i class="u-raid"></i></a></li>
 				<li><a href="./biz">交易<i class="u-biz"></i></a></li>
 				<li><a href="./story">回忆录<i class="u-story"></i></a></li>
