--- a/css/index/global.less
+++ b/css/index/global.less
@@ -46,7 +46,7 @@
 /*@import url('../tobe/module/header.less');		//头部*/
 /*@import url('../tobe/module/nav.less');			//导航*/
 /*@import url('../tobe/module/footer.less');		//底部*/
-@import url('../tobe/module/dialog.less');		//对话框
+/*@import url('../tobe/module/dialog.less');		//对话框*/
 /*@import url('../tobe/module/float.less');		//浮层*/
 /*@import url('../tobe/module/404.less');		//404错误*/
 
@@ -100,7 +100,7 @@
 
 @import url('../tobe/custom/c-wall.less');				//壁纸模块
 @import url('../tobe/custom/u-list-type.less');			//自定义列表模块
-@import url('../tobe/custom/c-showbox.less');			//灯箱图片
+/*@import url('../tobe/custom/c-showbox.less');			//灯箱图片*/
 
 
 /*common 新模板公共样式
@@ -242,12 +242,12 @@
 
 /*book 茶馆
 ------------------------------------------*/
-@import url('../tobe/book/book-layout.less');			//茶馆列表页
+/*@import url('../tobe/book/book-layout.less');			//茶馆列表页
 @import url('../tobe/book/book-sidebar.less');			//茶馆侧边栏
 @import url('../tobe/book/book-list.less');				//茶馆列表页
 @import url('../tobe/book/book-view.less');				//茶馆单页
 @import url('../tobe/book/book-post.less');				//茶馆发布页
-@import url('../tobe/book/book.less');					//茶馆
+@import url('../tobe/book/book.less');					//茶馆*/
 
 /*about 关于
 ------------------------------------------*/
@@ -310,7 +310,7 @@
 
 /* 旧视频、宠物
 ------------------------------------------*/
-@import url('../tobe/pvx/pvx-old.less');
-@import url('../tobe/pvx/pet-old.less');
-@import url('../tobe/pvx/video-old.less');
+/*@import url('../tobe/pvx/pvx-old.less');*/
+/*@import url('../tobe/pvx/pet-old.less');*/
+/*@import url('../tobe/pvx/video-old.less');*/
 
