--- a/css/module/common/c-header/nav.less
+++ b/css/module/common/c-header/nav.less
@@ -6,6 +6,23 @@
 	.size(100%,@c-header-nav-height);
 	border-bottom:1px solid #ddd;
 	overflow:hidden; 	//for ipad
+
+	.wp{
+		.pr;
+		.h(100%);
+		.u-all{
+			.pa;.rb(0,0);
+			letter-spacing:1px;
+			background-color:#fff;
+			border:1px solid #ddd;
+			border-bottom:none;
+			padding:0 10px;
+			&.on{
+				background-color:@basecolor;
+				color:#fff;
+			}
+		}
+	}
 }
 
 .c-header-nav-list{
@@ -15,12 +32,15 @@
 		a{
 			transition:0.1s ease-in-out;
 			.db;.x;.fz(14px,2);
-			padding:(@c-header-nav-height - @c-header-nav-liheight)/2 20px;
+			.w(42px);
+			padding:22px 15px;
+			//padding:12px 15px;
 
 			span{
 				.db;color:#999;
 				.fz(12px,1.2);
 				font-family:"Trebuchet MS",'Helvetica Neue',Helvetica,Arial,sans-serif;
+				//.none;
 			}
 			&.new{
 				background: url('@{url}user/new.gif')no-repeat right 35%;
