--- a/source/plugin/smart_video/template/v.htm
+++ b/source/plugin/smart_video/template/v.htm
@@ -1,4 +1,5 @@
 {template common/header}
+<link rel="stylesheet" href="http://css.jx3pve.com/css/pvx/pvx-video-old.css" type="text/css" />
 <script type="text/javascript" src="source/plugin/smart_video/static/js/jquery.min.js"></script>
 <div class="wrap pvx">
     <div class="main video">
