--- a/template/book/forum/sidebar.htm
+++ b/template/book/forum/sidebar.htm
@@ -1,46 +1,36 @@
 <!-- jx3pve:分类导航 -->
-<h2>分类导航<a class="u-btn-pub" href="http://www.jx3pve.com/forum.php?mod=post&action=newthread&fid=390" target="_blank">快速发布</a></h2>
-<ul class="m-book-sort">
-    <li><a title="剑三同人小说" class="fiction" href="http://www.jx3pve.com/forum.php?mod=forumdisplay&fid=390&filter=typeid&typeid=358"><i></i>小说<em>fan fiction</em></a></li>
-    <li><a title="剑三剧情史记" class="plot" href="http://www.jx3pve.com/forum.php?mod=forumdisplay&fid=390&filter=typeid&typeid=359"><i></i>剧情史记<em>jx3 history</em></a></li>
+<h2 class="default-sidebar-title">分类导航<a class="u-more" href="./book" title="全部">全部</a></h2>
+<ul class="default-sidebar-content m-book-sort">
     <li><a title="玩家回忆录" class="memoirs" href="http://www.jx3pve.com/forum.php?mod=forumdisplay&fid=390&filter=typeid&typeid=360"><i></i>回忆录<em>your memoirs</em></a></li>
     <li><a title="那些江湖传说" class="legend" href="http://www.jx3pve.com/forum.php?mod=forumdisplay&fid=390&filter=typeid&typeid=361"><i></i>江湖传说<em>legend in jx3world</em></a></li>
+    <li><a title="剑三同人小说" class="fiction" href="http://www.jx3pve.com/forum.php?mod=forumdisplay&fid=390&filter=typeid&typeid=358"><i></i>小说<em>fan fiction</em></a></li>
+    <li><a title="剑三剧情史记" class="plot" href="http://www.jx3pve.com/forum.php?mod=forumdisplay&fid=390&filter=typeid&typeid=359"><i></i>剧情史记<em>jx3 history</em></a></li>
 </ul>
 
-<h2>作品搜索</h2>
-<div class="m-book-search m-pvx-search">
+<h2 class="default-sidebar-title">作品搜索</h2>
+<div class="default-sidebar-content m-book-search default-sidebar-search">
     <form method="post" autocomplete="off" name="searhsort" id="searhsort" action="forum.php?mod=forumdisplay&fid=390&filter=sortid&sortid=28">
         <div class="item name">
-            <span class="label">作品名称</span>
-            <input type="text" name="searchoption[256][value]" size="15" class="px vm" value="">
+            <span class="label">作品名称:</span>
+            <input type="text" name="searchoption[256][value]" size="15" class="u-text" value="">
         </div>
         <div class="item author">
-            <span class="label">作&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;者</span>
-            <input type="text" name="searchoption[257][value]" size="15" class="px vm" value="">
+            <span class="label">作者:</span>
+            <input type="text" name="searchoption[257][value]" size="15" class="u-text" value="">
         </div>
-        <button type="submit" class="u-button-search" name="searchsortsubmit">搜索</button>
+        <button type="submit" class="u-button u-button-search" name="searchsortsubmit">搜索</button>
     </form>
-    <div class="hot">
-        <h3>热搜：</h3>
-        <!--{block/1305}-->
-    </div>
-</div>
-
-<!-- jx3pve:主编推荐 -->
-<h2>主编推荐<a class="more" href="http://www.jx3pve.com/forum.php?mod=forumdisplay&fid=390&filter=digest&digest=1" target="_blank">更多</a></h2>
-<div class="m-book-recommond m-pvx-imglist-2">
-   <!--{block/1411}-->
 </div>
 
 <!-- jx3pve:本周排行 -->
-<h2>阅读排行榜<a class="more" href="http://www.jx3pve.com/forum.php?mod=forumdisplay&fid=390&filter=reply&orderby=views&sortid=28&sortall=1" target="_blank">更多</a></h2>
-<div class="m-book-top m-pvx-top">
+<h2 class="default-sidebar-title">阅读排行榜<a class="u-more" href="./forum.php?mod=forumdisplay&fid=390&filter=reply&orderby=views&sortid=28&sortall=1">更多</a></h2>
+<div class="default-sidebar-content m-book-top default-sidebar-toplist m-pvx-top">
     <!--{block/1306}-->
 </div>
 
 
 <!-- jx3pve:任务中心 -->
-<h2>任务奖励<a class="more" href="http://www.jx3pve.com/home.php?mod=task" target="_blank">更多</a></h2>
-<div class="m-book-tasklist m-pvx-tasklist">
+<h2 class="default-sidebar-title">任务奖励<a class="u-more" href="./home.php?mod=task" data-target="blank" title="查看更多">更多任务</a></h2>
+<div class="default-sidebar-content m-book-tasklist default-sidebar-tasklist">
     <!--{block/1308}-->
 </div>
