--- a/template/default/common/nav.htm
+++ b/template/default/common/nav.htm
@@ -1,21 +1,20 @@
 <div class="c-header-nav">
 	<div class="wp">
 		<ul class="c-header-nav-list" id="c-header-nav">
+			<li><a href="http://www.jx3pve.com">首页<span>Index</span></a></li>
 			<li class="{if $_G[fid]=='294'}on{/if}"><a href="http://www.jx3pve.com/macro">宏库<span>Macro</span></a></li>
 			<li class="{if $_G[fid]=='321'}on{/if}"><a href="http://www.jx3pve.com/tool">工具<span>Tool</span></a></li>
 			<li id="c-header-nav-app"><a href="http://www.jx3pve.com/app">应用<span>APP</span></a></li>
 			<!-- <li class="{if $_G[fid]=='79'}on{/if}"><a href="http://www.jx3pve.com/skin">皮肤<span>Tool</span></a></li> -->
-			<li class="{if $_G[fid]=='384'}on{/if}"><a class="new" href="http://www.jx3pve.com/role">职业<span>Role</span></a></li>
-			<li class="{if $_G[fid]=='369'}on{/if}"><a class="new" href="http://www.jx3pve.com/fam">副本<span>Fam</span></a></li>
+			<li class="{if $_G[fid]=='384'}on{/if}"><a href="http://www.jx3pve.com/role">职业<span>Role</span></a></li>
+			<li class="{if $_G[fid]=='369'}on{/if}"><a href="http://www.jx3pve.com/fam">副本<span>Fam</span></a></li>
 			<li class="{if $_G[fid]=='92'}on{/if}"><a href="http://www.jx3pve.com/face">捏脸<span>Face</span></a></li>
+			<!-- <li class="{if $_G[fid]=='79'}on{/if}"><a href="http://www.jx3pve.com/wall">壁纸<span>Wall</span></a></li> -->
 			<li class="{if $_G[fid]=='67'}on{/if}"><a href="http://www.jx3pve.com/raid">团队<span>Raid</span></a></li>
 			<li class="{if $_G[fid]=='394'}on{/if}"><a href="http://www.jx3pve.com/biz">交易<span>Biz</span></a></li>
-			<li class="{if $_G[fid]=='283'}on{/if}"><a href="http://www.jx3pve.com/pet">宠物<span>Pet</span></a></li>
-			<li class=""><a href="http://www.jx3pve.com/video">视频<span>Video</span></a></li>
 			<li class="{if $_G[fid]=='390'}on{/if}"><a href="http://www.jx3pve.com/book">回忆录<span>Story</span></a></li>
 			<li class="{if $_G[fid]=='2'}on{/if}"><a href="http://www.jx3pve.com/bbs">讨论区<span>Forum</span></a></li>
-			<!-- 新版信息（江湖）包含 买卖、情缘、师徒、团队 -->
-			<!-- 百科包含宠物、奇遇、视频，陆续加入职业与副本 -->
 		</ul>
+		<a href="./sitemap" class="u-all {if $_GET['topicid']==110}on{/if}">全部<span>All</span></a>
 	</div>
 </div>
