特殊列表模式下的新窗口打开问题

--- a/template/default/forum/列表页/forumdisplay_sort.htm
+++ b/template/default/forum/列表页/forumdisplay_sort.htm
@@ -10,3 +10,5 @@
 </div>
 
 <!--{template widget/w_pages_bottom_list}-->
+
+<script src="http://js.jx3pve.com/js/widget/w-sorttarget.min.js"></script>
