--- a/template/biz/forum/sidebar.htm
+++ b/template/biz/forum/sidebar.htm
@@ -1,29 +1,15 @@
-<div class="m-biz-sidebar">
-	<!-- jx3pve:交易搜索 -->
-	<div class="m-biz-filter s-filter-font">
-		<!--{subtemplate jx3pve/s_filter_font}-->
-	</div>
+<div class="default-sidebar-title">条件筛选</div>
+<div class="default-sidebar-content s-filter-font">
+	<!--{subtemplate jx3pve/s_filter_font}-->
+</div>
 
-    <!-- 类型说明 -->
-    <div class="m-biz-typetips">
-        <!--{block/1712}-->
-    </div>
+<!-- 类型说明 -->
+<div class="m-biz-typetips">
+    <!--{block/1712}-->
+</div>
 
-    <!-- AD -->
-    <!--  <div class="m-biz-ad"> -->
-        <!--<!--{subtemplate jx3pve/c_banner_d}-->-->
-    <!-- </div> -->
-
-    <!-- 本版声明 -->
-    <h2>本版规则</h2>
-    <div class="m-biz-ac">
-        <!--{block/1713}-->
-    </div>
-
-    <!-- <h2>广而告之<a class="u-tips-faq" href="http://www.jx3pve.com/misc.php?mod=faq&action=faq&id=1&messageid=116" target="_blank" title="这是什么？"></a></h2> -->
-    <!-- 扩展 -->
-    <div class="m-biz-sextend">
-        <!--{block/1714}-->
-    </div>
-
+<!-- 本版声明 -->
+<h2 class="default-sidebar-title">本版规则</h2>
+<div class="default-sidebar-content m-biz-ac">
+    <!--{block/1713}-->
 </div>
