--- a/css/global/var.less
+++ b/css/global/var.less
@@ -20,3 +20,7 @@
 .default-fontfamily(){
     font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif,"宋体";
 }
+.noSidebar(){
+	.default-sidebar{.none;}
+	.default-content{float:none;.w(auto)!important;}
+}
