--- a/css/index/global.less
+++ b/css/index/global.less
@@ -56,56 +56,56 @@
 /*@import url('../tobe/discuz/discuz-reset.less');		//基础重置*/
 /*@import url('../tobe/discuz/discuz-block.less');		//块级样式*/
 /*@import url('../tobe/discuz/discuz-button.less');		//按钮*/
-@import url('../tobe/discuz/discuz-route.less');		//面包屑位置
+/*@import url('../tobe/discuz/discuz-route.less');		//面包屑位置*/
 /*@import url('../tobe/discuz/discuz-sortoption.less');	//分类信息*/
-@import url('../tobe/discuz/discuz-list.less');			//列表页
+/*@import url('../tobe/discuz/discuz-list.less');			//列表页*/
 
-@import url('../tobe/discuz/discuz-view.less');			//帖子页
-@import url('../tobe/discuz/discuz-content.less');		//帖子内容
+/*@import url('../tobe/discuz/discuz-view.less');			//帖子页
+@import url('../tobe/discuz/discuz-content.less');		//帖子内容*/
 
 /*@import url('../tobe/discuz/discuz-primary.less');		//分类信息*/
 /*@import url('../tobe/discuz/discuz-post.less');			//发布页*/
 /*@import url('../tobe/discuz/discuz-editor.less');		//编辑器*/
-@import url('../tobe/discuz/discuz-extend.less');		//扩展条
+/*@import url('../tobe/discuz/discuz-extend.less');		//扩展条*/
 /*@import url('../tobe/discuz/discuz-admin.less');		//门户管理*/
 /*@import url('../tobe/discuz/discuz-rate.less');			//评分窗口*/
 
 
 /*custom DZ自定义模块
 ------------------------------------------*/
-@import url('../tobe/custom/u-msg.less');				//消息提醒
+/*@import url('../tobe/custom/u-msg.less');				//消息提醒
 @import url('../tobe/custom/u-vip.less');				//vip
 
-@import url('../tobe/custom/c-star.less');				//评分模块
+@import url('../tobe/custom/c-star.less');				//评分模块*/
 /*@import url('../tobe/custom/c-panel.less');				//操作条*/
-@import url('../tobe/custom/c-author.less');			//楼主
-@import url('../tobe/custom/c-replyer.less');			//回复人
+/*@import url('../tobe/custom/c-author.less');			//楼主
+@import url('../tobe/custom/c-replyer.less');			//回复人*/
 
-@import url('../tobe/custom/w-route.less');				//路径面包屑
+/*@import url('../tobe/custom/w-route.less');				//路径面包屑*/
 /*@import url('../tobe/custom/w-pages.less');				//分页*/
 
 /*@import url('../tobe/custom/w-category-nav.less');		//分类导航
 @import url('../tobe/custom/w-order.less');				//排序
 @import url('../tobe/custom/w-filter.less');			//字段筛选*/
 
-@import url('../tobe/custom/s-filter.less');			//侧边栏筛选(font)
+/*@import url('../tobe/custom/s-filter.less');			//侧边栏筛选(font)
 
-@import url('../tobe/custom/w-lastedit-th.less');		//最后更新头
+@import url('../tobe/custom/w-lastedit-th.less');		//最后更新头*/
 
 /*@import url('../tobe/custom/w-index-tg.less');			//首页开关*/
-@import url('../tobe/custom/w-listnull-tips.less');		//无内容提示
+/*@import url('../tobe/custom/w-listnull-tips.less');		//无内容提示
 
 @import url('../tobe/custom/w-hotstar.less');			//评星
 @import url('../tobe/custom/widget.less');				
 
 @import url('../tobe/custom/c-wall.less');				//壁纸模块
-@import url('../tobe/custom/u-list-type.less');			//自定义列表模块
+@import url('../tobe/custom/u-list-type.less');			//自定义列表模块*/
 /*@import url('../tobe/custom/c-showbox.less');			//灯箱图片*/
 
 
 /*common 新模板公共样式
 ------------------------------------------*/
-@import url('../tobe/common/pve-layout.less');			//布局
+/*@import url('../tobe/common/pve-layout.less');			//布局
 @import url('../tobe/common/pve-header.less');			//头部
 @import url('../tobe/common/pve-sidebar.less');			//侧边栏
 @import url('../tobe/common/pve-list.less');			//侧边栏
@@ -122,7 +122,7 @@
 @import url('../tobe/common/pvx-view.less');			//单页
 @import url('../tobe/common/pvx-content.less');			//内容
 @import url('../tobe/common/pvx-pad.less');				//平板
-@import url('../tobe/common/pvx-m.less');				//移动
+@import url('../tobe/common/pvx-m.less');				//移动*/
 
 
 /*user 用户中心
@@ -227,7 +227,7 @@
 @import url('../tobe/raid/raid-team.less');				//团队
 @import url('../tobe/raid/raid-yanyuan.less');			//团员
 /*@import url('../tobe/raid/raid-jiebao.less');			//五甲捷报*/
-@import url('../tobe/raid/raid-biz.less');				//包团服务
+/*@import url('../tobe/raid/raid-biz.less');				//包团服务*/
 
 
 /*face 捏脸
@@ -296,18 +296,18 @@
 /*@import url('../tobe/fb/fb-jdqx.less');					//剑胆琴心*/
 
 /*zlp 资料片专题
-------------------------------------------*/
-@import url('../tobe/zlp/jdqx.less');					//剑胆琴心
+------------------------------------------*//*
+@import url('../tobe/zlp/jdqx.less');					//剑胆琴心*/
 
 
 /*biz 交易栏目
 ------------------------------------------*/
-@import url('../tobe/biz/biz-sidebar.less');
+/*@import url('../tobe/biz/biz-sidebar.less');
 @import url('../tobe/biz/biz-list.less');
 @import url('../tobe/biz/biz-post.less');
 @import url('../tobe/biz/biz-view.less');
 @import url('../tobe/biz/biz.less');
-
+*/
 /* 旧视频、宠物
 ------------------------------------------*/
 /*@import url('../tobe/pvx/pvx-old.less');*/
