--- a/css/module/widget/w-dialog.less
+++ b/css/module/widget/w-dialog.less
@@ -59,9 +59,17 @@
 		.w(auto);
 	}
 }
-//收藏
-.ua-responsive .screen-s #fwin_k_favorite{
-}
-//收听提示
-.ua-responsive .screen-s #fwin_followmod{
+
+.ua-responsive .screen-s #fwin_sendpm{
+	.pm{
+		.w(auto);
+	}
+	.pmb{
+		.w(auto);
+		.h(180px);
+	}
+	.pm_tac{
+		a{.none;}
+		.y{.db;}
+	}
 }
