--- a/css/pvx/pvx-jh.less
+++ b/css/pvx/pvx-jh.less
@@ -1,6 +1,16 @@
 @import url('../public/base.less');		//函数
 @import url('../global/var.less');			//常量
 @import url('../global/color.less');		//配色
+@import url('../module/ui/tips.less');		//配色
 
 @import url('jh/common.less');
-@import url('jh/biz.less');
+@import url('jh/layout.less');
+@import url('jh/post.less');
+
+@import url('jh/biz-list.less');
+@import url('jh/biz-view.less');
+
+@import url('jh/verif.less');
+@import url('jh/raid.less');
+@import url('jh/member-view.less');
+@import url('jh/member-list.less');
