--- a/template/fam/forum/sidebar.htm
+++ b/template/fam/forum/sidebar.htm
@@ -47,8 +47,8 @@
     <ul>
         <li><a href="./fb" data-target="_blank"><i class="u-zt"></i>副本专题<em>Topic</em></a></li>
         <li><a href="./forum.php?mod=forumdisplay&fid=369&filter=sortid&sortid=12&orderby=dateline" data-target="_blank"><i class="u-top"></i>五甲捷报<em>Top</em></a></li>
-        <li><a href="./forum.php?mod=forumdisplay&fid=67&filter=sortid&sortid=9" data-target="_blank"><i class="u-team"></i>团队招募<em>Team</em></a></li>
-        <li><a href="./forum.php?mod=forumdisplay&fid=67&filter=sortid&sortid=13" data-target="_blank"><i class="u-member"></i>团员求职<em>Member</em></a></li>
+        <li><a href="./team" data-target="_blank"><i class="u-team"></i>团队招募<em>Team</em></a></li>
+        <li><a href="./member" data-target="_blank"><i class="u-member"></i>团员求职<em>Member</em></a></li>
     </ul>
 </div>
 
