--- a/template/jh/forum/post_tips.htm
+++ b/template/jh/forum/post_tips.htm
@@ -1,6 +1,8 @@
 <div class="c-post-tips">
 	<p id="c-post-tips-tg">+ 点击查看发布帮助</p>
 	<div id="c-post-tips-content">
-		<!--{block/1711}-->
+		<!--{if $_GET['fid']==394 || $_GET['fid']==404}-->
+			<!--{block/1711}-->
+		<!--{/if}-->
 	</div>
 </div>
