--- a/template/default/common/nav.htm
+++ b/template/default/common/nav.htm
@@ -10,8 +10,7 @@
 			<li class="{if $_G[fid]=='369'}on{/if}"><a href="http://www.jx3pve.com/fam">副本<span>Fam</span></a></li>
 			<li class="{if $_G[fid]=='92'}on{/if}"><a href="http://www.jx3pve.com/face">捏脸<span>Face</span></a></li>
 			<!-- <li class="{if $_G[fid]=='79'}on{/if}"><a href="http://www.jx3pve.com/wall">壁纸<span>Wall</span></a></li> -->
-			<li class="{if $_G[fid]=='67'}on{/if}"><a href="http://www.jx3pve.com/raid">团队<span>Raid</span></a></li>
-			<li class="{if $_G[fid]=='394'}on{/if}"><a href="http://www.jx3pve.com/biz">交易<span>Biz</span></a></li>
+			<!-- <li class="{if $_G[fid]=='67' || $_G[fid]=='407' || $_G[fid]=='394' || $_G[fid]=='404' || $_G[fid]=='406'}on{/if}"><a class="" href="http://www.jx3pve.com/raid">江湖<span>Info</span></a></li> -->
 			<li class="{if $_G[fid]=='390'}on{/if}"><a href="http://www.jx3pve.com/book">回忆录<span>Story</span></a></li>
 			<li class="{if $_G[fid]=='2'}on{/if}"><a href="http://www.jx3pve.com/bbs">讨论区<span>Forum</span></a></li>
 		</ul>
