--- a/template/jh/forum/custom_footer.htm
+++ b/template/jh/forum/custom_footer.htm
@@ -1,2 +1,2 @@
-<script src="http://js.jx3pve.com/js/pvx/pvx-biz.min.js"></script>
+<script src="http://test.jx3pve.com/js/pvx/pvx-jh.min.js"></script>
 <script src="http://js.jx3pve.com/js/widget/w-showbox.min.js"></script>
