--- a/css/index/global.less
+++ b/css/index/global.less
@@ -217,7 +217,7 @@
 ------------------------------------------*/
 /*@import url('../tobe/raid/group.less');					//群组栏目
 @import url('../tobe/raid/group-view.less');			//群组帖内*/
-@import url('../tobe/raid/verif.less');					//个人中心认证
+/*@import url('../tobe/raid/verif.less');					//个人中心认证
 @import url('../tobe/raid/raid-header.less');			//团队头部页
 @import url('../tobe/raid/raid-sidebar.less');			//侧边栏
 @import url('../tobe/raid/raid-post.less');				//发布页
@@ -225,7 +225,7 @@
 @import url('../tobe/raid/raid.less');					//首页
 
 @import url('../tobe/raid/raid-team.less');				//团队
-@import url('../tobe/raid/raid-yanyuan.less');			//团员
+@import url('../tobe/raid/raid-yanyuan.less');			//团员*/
 /*@import url('../tobe/raid/raid-jiebao.less');			//五甲捷报*/
 /*@import url('../tobe/raid/raid-biz.less');				//包团服务*/
 
