--- a/css/module/ui/ui.less
+++ b/css/module/ui/ui.less
@@ -11,6 +11,7 @@
 @import url('img.less');			//图片
 @import url('other.less');			//其他
 @import url('verif.less');			//认证
+@import url('role.less');			//门派
 
 
 .alertHTML .p_pop{
