--- a/css/pvx/jh/biz-view.less
+++ b/css/pvx/jh/biz-view.less
@@ -55,3 +55,15 @@
     .tips(yel);
     padding:5px;
 }
+
+.ua-responsive .screen-s {
+    .m-biz-pic{float:none;.auto(x);}
+    .m-biz-contact{
+        .none;
+    }
+    .m-biz-info{
+        .w(auto);
+        margin:0;
+        margin-top:10px;
+    }
+}
