--- a/css/pvx/jh/post.less
+++ b/css/pvx/jh/post.less
@@ -14,7 +14,11 @@
 	.pa;.rt(0,0);
 	padding:0 20px;
 }
-.ua-responsive .screen-s .u-jh-pubbtn{.none;}
+.ua-responsive .screen-s{
+	.u-jh-pubbtn,
+	.i-header-menu .u-all{.none;}
+} 
+
 .m-jh-postbox{
 	.fixed(o,400px,200px);
 	.z(40);
