--- a/css/pvx/pvx-jh.less
+++ b/css/pvx/pvx-jh.less
@@ -10,7 +10,8 @@
 @import url('jh/biz-list.less');
 @import url('jh/biz-view.less');
 
-@import url('jh/verif.less');
 @import url('jh/raid.less');
 @import url('jh/member-view.less');
 @import url('jh/member-list.less');
+@import url('jh/team-list.less');
+@import url('jh/team-view.less');
