--- a/template/default/common/nav.htm
+++ b/template/default/common/nav.htm
@@ -2,17 +2,17 @@
 	<div class="wp">
 		<ul class="c-header-nav-list" id="c-header-nav">
 			<li><a href="http://www.jx3pve.com">首页<span>Index</span></a></li>
-			<li class="{if $_G[fid]=='294'}on{/if}"><a href="http://www.jx3pve.com/macro">宏库<span>Macro</span></a></li>
-			<li class="{if $_G[fid]=='321'}on{/if}"><a href="http://www.jx3pve.com/tool">工具<span>Tool</span></a></li>
-			<li id="c-header-nav-app"><a href="http://www.jx3pve.com/app">应用<span>APP</span></a></li>
-			<!-- <li class="{if $_G[fid]=='79'}on{/if}"><a href="http://www.jx3pve.com/skin">皮肤<span>Tool</span></a></li> -->
-			<li class="{if $_G[fid]=='384'}on{/if}"><a href="http://www.jx3pve.com/role">职业<span>Role</span></a></li>
-			<li class="{if $_G[fid]=='369'}on{/if}"><a href="http://www.jx3pve.com/fam">副本<span>Fam</span></a></li>
-			<li class="{if $_G[fid]=='92'}on{/if}"><a href="http://www.jx3pve.com/face">捏脸<span>Face</span></a></li>
-			<!-- <li class="{if $_G[fid]=='79'}on{/if}"><a href="http://www.jx3pve.com/wall">壁纸<span>Wall</span></a></li> -->
-			<!-- <li class="{if $_G[fid]=='67' || $_G[fid]=='407' || $_G[fid]=='394' || $_G[fid]=='404' || $_G[fid]=='406'}on{/if}"><a class="" href="http://www.jx3pve.com/raid">江湖<span>Info</span></a></li> -->
-			<li class="{if $_G[fid]=='390'}on{/if}"><a href="http://www.jx3pve.com/book">回忆录<span>Story</span></a></li>
-			<li class="{if $_G[fid]=='2'}on{/if}"><a href="http://www.jx3pve.com/bbs">讨论区<span>Forum</span></a></li>
+			<li class="{if $_G[fid]=='294'}on{/if}"><a href="./macro">宏库<span>Macro</span></a></li>
+			<li class="{if $_G[fid]=='321'}on{/if}"><a href="./tool">工具<span>Tool</span></a></li>
+			<li id="c-header-nav-app"><a href="./app">应用<span>APP</span></a></li>
+			<!-- <li class="{if $_G[fid]=='79'}on{/if}"><a href="./skin">皮肤<span>Tool</span></a></li> -->
+			<li class="{if $_G[fid]=='384'}on{/if}"><a href="./role">职业<span>Role</span></a></li>
+			<li class="{if $_G[fid]=='369'}on{/if}"><a href="./fam">副本<span>Fam</span></a></li>
+			<li class="{if $_G[fid]=='92'}on{/if}"><a href="./face">捏脸<span>Face</span></a></li>
+			<!-- <li class="{if $_G[fid]=='79'}on{/if}"><a href="./wall">壁纸<span>Wall</span></a></li> -->
+			<li class="{if $_G[fid]=='67' || $_G[fid]=='407' || $_G[fid]=='394' || $_G[fid]=='404' || $_G[fid]=='406'}on{/if}"><a class="" href="./raid">江湖<span>Info</span></a></li>
+			<li class="{if $_G[fid]=='390'}on{/if}"><a href="./book">回忆录<span>Story</span></a></li>
+			<li class="{if $_G[fid]=='2'}on{/if}"><a href="./bbs">讨论区<span>Forum</span></a></li>
 		</ul>
 		<a href="./sitemap" class="u-all {if $_GET['topicid']==110}on{/if}">全部<span>All</span></a>
 	</div>
