--- a/template/jh/tpl/biz-list.hbs
+++ b/template/jh/tpl/biz-list.hbs
@@ -8,10 +8,10 @@
             <span class="biz-fwq">服务器</span>
         </a></li>
         [loop]
-        <li class="tbody">
+        <li class="tbody m-biz-item">
             <a class="e-sort-item" href="{subject_url}" data-target="_blank">
             <span class="u-admin">{modcheck}</span>
-            <span class="biz-type">{biz_type_value}</span>
+            <span class="biz-type"><i></i><em>{biz_type_value}</em></span>
             <span class="biz-title">{subject}</span>
             <span class="biz-dateline">{dateline}</span>
             <span class="biz-fwq">{fuwuqi_value}</span>
