--- a/template/jh/tpl/member-list.hbs
+++ b/template/jh/tpl/member-list.hbs
@@ -1,7 +1,7 @@
-<div class="m-member-list">
+<div class="m-member-list m-raid-list">
 	<ul>
 	[loop]
-		<li class="m-member-item">
+		<li class="m-member-item m-raid-item">
 			<img class="u-avt" src="{avatar_small}" alt="">
 			<span class="u-info">
 				<span class="u-name">{author}</span>
@@ -13,7 +13,6 @@
 			</span>
 			<em class="e-failtime">{failtime_value}</em>
 			<span class="u-control">{modcheck}</span>
-			
 		</li>
 	[/loop]
 	</ul>
