--- a/css/pvx/jh/member-view.less
+++ b/css/pvx/jh/member-view.less
@@ -28,6 +28,9 @@
 	.m-intro{
 	}
 }
-.e-role{
-	margin-top:-3px;
+.ua-responsive .screen-s{
+	.m-member-view .m-avt{
+		.ps;
+		margin-bottom:10px;
+	}
 }
