--- a/template/jh/tpl/team-list.hbs
+++ b/template/jh/tpl/team-list.hbs
@@ -8,9 +8,9 @@
                 <i class="sex"><span>{raidnature_value}</span></i>
             </span>
             <span class="u-raidinfo">
-                <span class="tr"><span class="name">{raidname_value}</span></span>
-                <span class="tr"><em class="label">服务器：</em><span class="key">{fuwuqi_value}</span></span>
-                <span class="tr"><em class="label">YY频道：</em><span class="key">{raidyy_value}</span></span>
+                <span class="u-name">{raidname_value}</span>
+                <span class="u-fwq"><em>服务器</em><span>{fuwuqi_value}</span></span>
+                <span class="u-yy"><em>YY频道：</em><span>{raidyy_value}</span></span>
             </span>
             <a class="u-link e-sort-item" href="{subject_url}" data-target="_blank"></a>
             <em class="e-failtime">{failtime_value}</em>
