--- a/css/module/widget/w-showbox.less
+++ b/css/module/widget/w-showbox.less
@@ -1,31 +1,10 @@
 //查看预览图
 .u-imgorigin{
 	.pointer;
-}
-.u-imgorigin-fix{
-	.pf;.lt(50%,50%);
-	.z(800);
-	padding:28px;
-	background-color:#fff;
-	border:1px solid #ccc;
-	box-shadow: 0 0 5px rgba(0,0,0,.5);
-	.r(6px);
-	max-width:80%;
-	max-height:80%;
-
-	&:after{
-		content:'';
-		.size(64px);.db;.pointer;
-		background:url('@{url}custom/close.png') no-repeat 0 0;
-		&:hover{
-			animation:rotateHalf 0.5s ease-in-out;
-		}
+	&.isEmpty{
+		cursor:default;
 	}
 }
-.fixpage{
-	.full;.clip;
-}
-
 .c-showbox{
 	background-color:#fff;
 	border:1px solid #ccc;
@@ -40,10 +19,8 @@
 		.pf;.lt(50%,50%);.z(800);
 	}
 }
-.c-showbox-content{
-	.full;
-	overflow:hidden;
-	img{.db;max-width:100%;max-height:100%;.auto(x);}
+.c-showbox-img{
+	.db;max-width:100%;max-height:100%;
 }
 
 .c-showbox-close{
