--- a/css/pvx/jh/team-view.less
+++ b/css/pvx/jh/team-view.less
@@ -35,6 +35,8 @@
 			em{color:#555;.dbi;.y;.w(80px);}
 			span{.y;}
 			.nobreak;
+			a{color:@blue-link;text-decoration:underline;}
+			a:hover{color:#c00;}
 		}
 	}
 }
