--- a/css/module/widget/w-filter.less
+++ b/css/module/widget/w-filter.less
@@ -71,7 +71,6 @@
 	}
 }
 
-//表单类型总是放在侧边栏
 .w-filter-form{
 	.none;
 }
@@ -82,4 +81,33 @@
 		line-height:26px;
 		&.on{background-color:#fff;}
 	}
+}
+
+
+//服务器特殊类别
+.e-fwq{
+	.e-fwq-filter{
+		.db;
+		border-bottom:1px dashed #ddd;
+		padding:0 5px 5px 5px;
+		margin-bottom:5px;
+		.clearfix;
+
+		span{
+			.db;.fl;
+			margin-right:15px;
+			&.on{
+				.bold;
+			}
+		}
+	}
+	li{
+		.db;float:none !important;
+		padding:5px;
+	}
+
+}
+.ua-responsive .screen-s .e-fwq{
+	max-height:280px;
+	overflow-y:auto;
 }
