--- a/css/pvx/book/list.less
+++ b/css/pvx/book/list.less
@@ -22,9 +22,11 @@
 		//.bold;
 		.color(@blue-link);
 		&:hover{text-decoration:underline;}
+		.fzlh(13px,26px);
 	}
 	.u-author{
 		.color(#555);
+		.fzlh(13px,26px);
 	}
 	.u-time{
 		i{
