--- a/css/pvx/book/sidebar.less
+++ b/css/pvx/book/sidebar.less
@@ -57,10 +57,11 @@
 //排行榜
 .m-book-top{
 	margin-bottom:15px;
-	.fz(12px,2);
 	ul{
 		li{
 			margin-bottom:5px;
+			.fzlh(12px,24px);
+			.clip;
 			a{
 				.db;.nobreak;
 				.pr;
