--- a/css/module/widget/w-showbox.less
+++ b/css/module/widget/w-showbox.less
@@ -6,21 +6,24 @@
 	}
 }
 .c-showbox{
+	//max-width:80%;
+	width:80%;
+	max-height:80%;
+	//height:80%;
 	background-color:#fff;
 	border:1px solid #ccc;
 	box-shadow: 0 0 5px rgba(0,0,0,.5);
 	.r(6px);
-	max-width:80%;max-height:80%;
 	padding:28px;
-	
+	.pf;.z(800);
+	.lt(50%,50%);
 	.none;
-
-	&.c-showbox-show{
-		.pf;.lt(50%,50%);.z(800);
-	}
 }
 .c-showbox-img{
-	.db;max-width:100%;max-height:100%;
+	.db;
+	max-width:100%;
+	max-height:100%;
+	.auto(x);
 }
 
 .c-showbox-close{
