--- a/template/default/common/nav.htm
+++ b/template/default/common/nav.htm
@@ -10,7 +10,7 @@
 			<li class="{if $_G[fid]=='369'}on{/if}"><a href="./fam">副本<span>Fam</span></a></li>
 			<li class="{if $_G[fid]=='92'}on{/if}"><a href="./face">捏脸<span>Face</span></a></li>
 			<!-- <li class="{if $_G[fid]=='79'}on{/if}"><a href="./wall">壁纸<span>Wall</span></a></li> -->
-			<li class="{if $_G[fid]=='67' || $_G[fid]=='407' || $_G[fid]=='394' || $_G[fid]=='404' || $_G[fid]=='406'}on{/if}"><a class="" href="./raid">江湖<span>Info</span></a></li>
+			<li class="{if $_G[fid]=='67' || $_G[fid]=='407' || $_G[fid]=='394' || $_G[fid]=='404' || $_G[fid]=='406'}on{/if}"><a class="new" href="./raid">江湖<span>Info</span></a></li>
 			<li class="{if $_G[fid]=='390'}on{/if}"><a href="./book">回忆录<span>Story</span></a></li>
 			<li class="{if $_G[fid]=='2'}on{/if}"><a href="./bbs">讨论区<span>Forum</span></a></li>
 		</ul>
