--- a/template/default/widget/w_filter.htm
+++ b/template/default/widget/w_filter.htm
@@ -65,7 +65,7 @@
 		    	<div class="item">
 					<span class="label">$option[title]</span>
 		            <div class="value">
-		                <ul class="cl">
+		                <ul class="cl {if $option[identifier]=='fuwuqi'}e-fwq{/if}" id="{if $option[identifier]=='fuwuqi'}e-fwq{/if}">
 		                    <li{if $_GET[''.$option[identifier]] == 'all'} class="a"{/if}><a href="forum.php?mod=forumdisplay&fid=$_G[fid]&filter=sortid&sortid=$_GET['sortid']&searchsort=1$filterurladd&$option[identifier]=all$sorturladdarray[$option[identifier]]" class="xi2">{lang unlimited}</a></li>
 							<!--{if $option[type] == 'select'}-->
 								<!--{loop $option['choices'] $id $value}-->
