Signed-off-by: unknown <17229398@qq.com>

--- a/css/pvx/face/sidebar.less
+++ b/css/pvx/face/sidebar.less
@@ -1,11 +1,13 @@
 .m-face-sort{
 	//margin-bottom:10px;
-	margin-bottom:0;
+	margin-bottom:20px;
 	.clearfix;
 	li{
 		.size(100%,32px);
-		margin-bottom:10px;
 		//transition:0.1s ease-in-out;
+	    padding-top: 5px;
+	    border-bottom: 1px solid #ddd;
+	    padding-bottom: 5px;
 		&:hover{
 			background-color:#f7f7f7;
 		}
