--- a/template/face/forum/sidebar.htm
+++ b/template/face/forum/sidebar.htm
@@ -10,7 +10,7 @@
 <h2 class="default-sidebar-title">作者作品搜索<i class="u-search"></i></h2>
 <div class="default-sidebar-content m-face-search default-sidebar-search">
     <form method="post" autocomplete="off" name="searhsort" id="searhsort" action="forum.php?mod=forumdisplay&fid=92&filter=sortid&sortid=15">
-        <input type="text" name="searchoption[101][value]" size="15" class="u-text" value="">
+        <input type="text" name="searchoption[101][value]" size="15" class="u-text" value="" placeholder="请输入作者名称">
         <button type="submit" class="u-button-search u-button" name="searchsortsubmit">搜索</button>
     </form>
     <div class="m-hot">
