--- a/template/mix/forum/sidebar.htm
+++ b/template/mix/forum/sidebar.htm
@@ -6,7 +6,7 @@
 	<!--{block/1790}-->
 </div>
 
-<h2>发帖说明</h2>
-<div class="m-mix-ac m-pve-ac">
+<h2 class="default-sidebar-title">发帖说明</h2>
+<div class="default-sidebar-content m-mix-ac m-pve-ac">
 	<!--{block/1788}-->
 </div>
