--- a/css/module/widget/w-showbox.less
+++ b/css/module/widget/w-showbox.less
@@ -6,26 +6,31 @@
 	}
 }
 .c-showbox{
-	//max-width:80%;
-	width:80%;
+	max-width:80%;
 	max-height:80%;
-	//height:80%;
 	background-color:#fff;
 	border:1px solid #ccc;
 	box-shadow: 0 0 5px rgba(0,0,0,.5);
 	.r(6px);
 	padding:28px;
-	.pf;.z(800);
-	.lt(50%,50%);
+	.pf;.lt(0,0);.z(800);
 	.none;
+	&.isShow{
+		.lt(50%,50%);
+	}
+}
+.c-showbox-content{
+	.db;.full;
+	overflow:hidden;
+	img{
+		.db;
+		max-width:100%;
+		max-height:100%;
+	}
 }
 .c-showbox-img{
-	.db;
-	max-width:100%;
-	max-height:100%;
-	.auto(x);
+	
 }
-
 .c-showbox-close{
 	.pa;.lt(100%,0);margin-left:10px;
 	.size(64px);.db;.pointer;
