Signed-off-by: unknown <17229398@qq.com>

--- a/css/index/global.less
+++ b/css/index/global.less
@@ -158,9 +158,9 @@
 
 /*member 账号系统
 ------------------------------------------*/
-@import url('../tobe/member/member.less');				//注册登录
-@import url('../tobe/member/invitecode.less');			//购买邀请码
-@import url('../tobe/member/invite.less');				//邀请链接页
+/*@import url('../tobe/member/member.less');				//注册登录*/
+/*@import url('../tobe/member/invitecode.less');			//购买邀请码
+@import url('../tobe/member/invite.less');				//邀请链接页*/
 
 
 /*macro 宏栏目
