--- a/css/module/forum/viewthread/c-fli-primary.less
+++ b/css/module/forum/viewthread/c-fli-primary.less
@@ -136,6 +136,7 @@
 		.tobevip{
 			margin-top:-2px;
 		}
+		.tips(warning);
 	}
 	.showhide{
 		.size(auto,auto);
@@ -157,8 +158,9 @@
 }
 .ua-responsive .screen-s{
 	.locked{
-		background: none;
 		padding:10px;
+		background-image:none;
+		
 	}
 	.c-fli-article,.c-fli-reply,.t_f{
 		.t_table{
