--- a/template/default/common/header_common.htm
+++ b/template/default/common/header_common.htm
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:wb="http://open.weibo.com/wb" class="{if ($_G[groupid]==1)||($_G[groupid]==2)||($_G[groupid]==3)||($_G[groupid]==37)||($_G[groupid]==38)||($_G[groupid]==39)||($_G[groupid]==40)}adminHTML{/if} {if ($_G[groupid]==22)}vipHTML{/if}">
+<html xmlns:wb="http://open.weibo.com/wb" class="{if ($_G[groupid]==1)||($_G[groupid]==2)||($_G[groupid]==3)||($_G[groupid]==37)||($_G[groupid]==38)||($_G[groupid]==39)||($_G[groupid]==40)}adminHTML{/if} {if ($_G[groupid]==22)}vipHTML{/if} ua-responsive">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset={CHARSET}" />
 	<base href="{$_G['siteurl']}" />
@@ -9,7 +9,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	<meta name="renderer" content="webkit">
 	<meta http-equiv="Cache-Control" content="no-siteapp"/>
-	<!-- <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no,minimal-ui"/> -->
+	<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no,minimal-ui"/>
 
 	<!-- SEO -->
 	<title><!--{if !empty($navtitle)}-->$navtitle <!--{/if}--><!--{if empty($nobbname)}--> $_G['setting']['bbname']<!--{/if}--></title>
