--- a/css/module/common/c-footer/dialog.less
+++ b/css/module/common/c-footer/dialog.less
@@ -5,8 +5,6 @@
 	.size(600px,300px);
 
 	.m-primary{
-		width:600px - 20px;
-		height:300px - 20px;
 		background-color:#444;
 		border:10px solid #333;
 		box-shadow: 0 0 4px rgba(0,0,0,0.4);
@@ -73,5 +71,19 @@
 			}
 
 		}
+	}
+}
+
+.ua-responsive .screen-s{
+	.w-dialog{
+		.full;
+		margin:0;
+		left:0;top:0;
+		max-height:100%;
+		max-width:100%;
+		overflow-y:auto;
+	}
+	.w-dialog .m-primary .m-content{
+		.h(auto);
 	}
 }
