--- a/css/module/widget/w-dialog.less
+++ b/css/module/widget/w-dialog.less
@@ -73,3 +73,15 @@
 		.y{.db;}
 	}
 }
+
+.ua-responsive .screen-s{
+	#fwin_reply,#fwin_login{
+		top:0 !important;
+		max-width:100%;
+		max-height:100%;
+		overflow-y:auto;
+		.m-login-way{
+			padding:10px;
+		}
+	}
+}
