--- a/template/yylmacro/common/buyinvitecode.htm
+++ b/template/yylmacro/common/buyinvitecode.htm
@@ -1,25 +1,20 @@
-<!--{template common/header}-->
-
-<!-- 
- * Project: 用户中心 / 邀请码
- * HTML: template/$skin/common/buyinvitecode.htm
- * PHP: source/module/misc/misc_buyinvitecode.php
- * Style: user/invitecode.less
- * Description: user / invitecode
- * Creat: iRuxu 2015.6.28
- * Update : iRuxu 2015.6.28
- -->
-<div class="user-invitecode invitecode-box">
+<!--{template common/header_m}-->
+<link rel="stylesheet" href="http://css.jx3pve.com/css/user/member/invitecode.css" type="text/css" />
+<header class="i-header i-header-list">
+	<a class="i-header-back" href="javascript:;" onclick="history.go(-1)"><i></i></a>
+	<div class="i-header-title">邀请码</div>
+</header>
+<div class="invitecode-container">
 	<div id="wp" class="wp">
-		<div class="invitecode-container" id="ct">
+		<div id="ct">
 
 			<!--{if $order && $codes}-->
-				<div class="bm_h bbs invitecode-header">
-					<h3 class="xs2">{lang invitecode_succeed_title}</h3>
+				<div class="invitecode-header">
+					<h3>{lang invitecode_succeed_title}</h3>
 				</div>
-				<div class="bm_c invitecode-content">
-					<div class="rfm bw0 invitecode-success">
-						<p><textarea id="invitecode" class="pt invitecode-codebox" cols="40" rows="3">$codetext</textarea></p>
+				<div class="invitecode-content">
+					<div class="invitecode-success">
+						<p><textarea id="invitecode" class="u-textarea invitecode-codebox" cols="40" rows="3">$codetext</textarea></p>
 						<p class="mtn copy-code"><a href="javascript:;" onclick="copyinvitecode();" class="xi2">{lang copycode}</a></p>
 						<p class="mtn u-msg-success">{lang invitecode_email}</p>
 						<p class="mtm cl"><a href="member.php?mod={$_G[setting][regname]}&invitecode=$codes[0]" class="pn pnc z u-btn u-btn-ok"><strong>{lang reg_continue}</strong></a></p>
@@ -32,13 +27,12 @@
 					</script>
 				</div>
 			<!--{else}-->
-				<div class="bm_h bbs invitecode-header">
-					<h3 class="xs2">{lang invitecode_buycode}</h3>
+				<div class="invitecode-header">
+					<h3>{lang invitecode_buycode}</h3>
 				</div>
-				<div class="bm_c invitecode-content">
+				<div class="invitecode-content m-buy">
 					<form id="confirmform" class="postbox" method="post" autocomplete="off" action="misc.php?mod=buyinvitecode" onsubmit="ajaxpost(this.id, 'return_addfundsform');return false;">
-						<!-- JX3PVE:1015 -->
-						<div class="u-msg u-msg-ac"><!--{block/1015}--></div>
+						<div class="m-msg-wx"><!--{block/1015}--></div>
 						<input type="hidden" name="formhash" value="{FORMHASH}" />
 						<input type="hidden" name="buysubmit" value="true" />
 						<input type="hidden" name="handlekey" value="buyinvite" />
@@ -50,7 +44,10 @@
 							<table cellpadding="0" cellspacing="0">
 								<tr>
 									<th>{lang buy_nums}</th>
-									<td><input type="text" name="amount" id="amount" class="px p_fre vm" value="1" onkeyup="addamount()" /> {lang need_money} <strong id="desamount" class="xi1">$_G['setting']['inviteconfig']['invitecodeprice']</strong> {lang money_unit}</td>
+									<td>
+										<input type="text" name="amount" id="amount" class="u-text px p_fre vm" value="1" onkeyup="addamount()" />
+										<span class="u-msg u-msg-price">{lang need_money} <strong id="desamount" class="xi1">$_G['setting']['inviteconfig']['invitecodeprice']</strong> {lang money_unit}</span>
+									</td>
 								</tr>
 							</table>
 						</div>
@@ -59,10 +56,9 @@
 								<tr>
 									<th>{lang active_email}</th>
 									<td>
-										<input type="text" name="email" class="px p_fre vm" value="" /> 
-										{lang active_email_comment}
+										<input type="text" name="email" class="u-text u-mail px p_fre vm" value="" /> 
 										<span class="u-msg u-msg-email">
-											<a href="http://mail.163.com/" target="_blank">推荐使用163网易邮箱</a>
+											{lang active_email_comment}
 										</span>
 									</td>
 								</tr>
@@ -72,7 +68,7 @@
 							<table cellpadding="0" cellspacing="0">
 								<tr>
 									<th>{lang invitecode_expiration}</th>
-									<td>$maxinviteday</td>
+									<td><span class="u-exday">$maxinviteday</span></td>
 								</tr>
 							</table>
 						</div>
@@ -82,7 +78,7 @@
 									<th>{lang trade_type}</th>
 									<td>
 										<!--{if $_G[setting][ec_ratio] && ($_G[setting][ec_tenpay_bargainor] || $_G[setting][ec_tenpay_opentrans_chnid])}-->
-											<div class="mbm pbn bbda cl user-pay-tencent user-pay">
+											<div class="mbm pbn bbda cl m-payway-tencent user-pay-tencent user-pay">
 												<div id="div#tenpayBankList"></div><span id="#bank_type_value"></span>
 												<link rel="stylesheet" type="text/css" href="http://union.tenpay.com/bankList/css_col3.css" />
 												<script type="text/javascript">
@@ -94,12 +90,12 @@
 												</script>
 											</div>
 										<!--{/if}-->
-										<div class="long-logo mbw user-pay-alipay user-pay">
+										<div class="m-payway-alipay mbw user-pay-alipay user-pay">
 											<ul>
 											<!--{if $_G[setting][ec_ratio] && $_G[setting][ec_account]}-->
 												<li class="z">
-													<input name="bank_type" type="radio" value="alipay" id="apitype_alipay" checked="checked" $ecchecked /><label style="width:135px;height:32px;background: #FFF url({STATICURL}image/common/alipay_logo.gif) no-repeat;border: 1px solid #DDD;vertical-align: middle;position: relative;display: inline-block;background-color: white;" for="apitype_alipay"></label>
-													<span class="u-alipay-tips">如您选择支付宝,请注意交易接口页面输入的是“<b>支付密码</b>”而非"登录密码"</span>
+													<input name="bank_type" type="radio" value="alipay" id="apitype_alipay" checked="checked" $ecchecked /><label for="apitype_alipay"></label>
+													<span class="u-msg u-alipay-tips">如您选择支付宝,请注意交易接口页面输入的是“<b>支付密码</b>”而非"登录密码"</span>
 												</li>
 											<!--{/if}-->
 											</ul>
@@ -112,7 +108,7 @@
 							<table cellpadding="0" cellspacing="0">
 								<tr>
 									<th>&nbsp;</th>
-									<td><button type="submit" name="buysubmit" class="u-btn u-btn-ok" value="true"><strong>{lang confirms}</strong></button></td>
+									<td><button type="submit" name="buysubmit" class="u-btn u-btn-blue u-btn-ok" value="true"><strong>{lang confirms}</strong></button></td>
 								</tr>
 							</table>
 						</div>
@@ -132,4 +128,4 @@
 		</div>
 	</div>
 </div>
-<!--{template common/footer}
+<!--{template common/footer}-->
