--- a/template/yylmacro/portal/index.htm
+++ b/template/yylmacro/portal/index.htm
@@ -1,5 +1,5 @@
-<!--{template common/header}-->
-<script src="http://js.jx3pve.com/js/page/page-index.js"></script>
+<!--{template common/header_m}-->
+<link rel="stylesheet" href="http://css.jx3pve.com/css/index/index.css" type="text/css" />
 <div class="index-container">
     <div class="wp">
     
@@ -111,15 +111,6 @@
         </div>
     </div>
 </div>
-<div class="index-footer">
-    <div class="wp">
-        <div class="copyright"><!--{block/1510}--></div>
-        <div class="links">
-            <ul>
-                <li>友情链接：</li>
-                <!--{block/1511}-->
-            </ul>
-        </div>
-    </div>
-</div>
+<script src="http://js.jx3pve.com/js/plugin/swiper2.min.js"></script>
+<script src="http://js.jx3pve.com/js/page/page-index.js"></script>
 <!--{template common/footer}-->
