--- a/css/index/global.less
+++ b/css/index/global.less
@@ -37,7 +37,7 @@
 
 /*plugin 插件
 ------------------------------------------*/
-@import url('../tobe/plugin/swiper2.less');		//swiper
+/*@import url('../tobe/plugin/swiper2.less');		//swiper*/
 
 
 /*module 公共模块
@@ -265,13 +265,13 @@
 
 /*index 首页
 ------------------------------------------*/
-@import url('../tobe/index/index.less');				//首页
+/*@import url('../tobe/index/index.less');				//首页
 @import url('../tobe/index/index-slider.less');			//幻灯
 @import url('../tobe/index/index-news.less');			//新闻
 @import url('../tobe/index/index-zt.less');				//专题
 @import url('../tobe/index/index-app.less');			//应用
 @import url('../tobe/index/index-channel.less');		//频道
-@import url('../tobe/index/index-copy.less');			//版权
+@import url('../tobe/index/index-copy.less');			//版权*/
 
 /*portal 门户
 ------------------------------------------*/
